--- a/BreadcrumbsTblVExample/Base.lproj/Main.storyboard
+++ b/BreadcrumbsTblVExample/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,8 +15,58 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3K-Tv-E4z">
+                                <rect key="frame" x="0.0" y="290" width="600" height="20"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="pYZ-Qq-2kr">
+                                <rect key="frame" x="0.0" y="28" width="600" height="572"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="BreadCrumbTableViewCell" id="t1u-OT-22D" customClass="BreadCrumbTableViewCell">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="t1u-OT-22D" id="ou4-ra-DAh">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TEST TEST " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3U1-Tz-l2i">
+                                                    <rect key="frame" x="197" y="11" width="207" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="207" id="zQ9-ZF-6lV"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3U1-Tz-l2i" firstAttribute="centerY" secondItem="ou4-ra-DAh" secondAttribute="centerY" id="dG6-ti-ixJ"/>
+                                                <constraint firstItem="3U1-Tz-l2i" firstAttribute="leading" secondItem="ou4-ra-DAh" secondAttribute="leading" constant="197" id="oin-XM-hqw"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="GPU-V7-jNT"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="UzG-D7-z5N"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="j3K-Tv-E4z" firstAttribute="leading" secondItem="pYZ-Qq-2kr" secondAttribute="leading" id="656-cu-pre"/>
+                            <constraint firstItem="j3K-Tv-E4z" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="8ze-So-73z"/>
+                            <constraint firstItem="pYZ-Qq-2kr" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="M0g-hs-VdX"/>
+                            <constraint firstItem="j3K-Tv-E4z" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="270" id="NDl-0c-XIR"/>
+                            <constraint firstItem="pYZ-Qq-2kr" firstAttribute="trailing" secondItem="j3K-Tv-E4z" secondAttribute="trailing" id="NRi-Gc-vOF"/>
+                            <constraint firstItem="pYZ-Qq-2kr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="cNf-HS-GHQ"/>
+                            <constraint firstItem="j3K-Tv-E4z" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ea7-DH-r2d"/>
+                            <constraint firstAttribute="trailing" secondItem="pYZ-Qq-2kr" secondAttribute="trailing" id="gj8-CJ-pJY"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="breadcrumbsTable" destination="pYZ-Qq-2kr" id="HwO-db-csC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
